--- a/templates/tpl_view_table.html
+++ b/templates/tpl_view_table.html
@@ -3,13 +3,16 @@
 
 {%- block title -%}<div class="header item">{{ view.title }}</div>{%- endblock -%}
 
-{%- block menu -%}{% include "incl_menu.html" %}{%- endblock -%}
+{%- block menu -%}{% include "inc_menu.html" %}{%- endblock -%}
 
 {%- block boutons -%}
 {%- endblock -%}
 
 {%- block actions -%}
 {%- if application.tables[tableid].views[viewid].actions or application.tables[tableid].views[viewid].form_add -%}
+
+{% set tv = tvs | first %}
+
 {%- if not view.filters -%}
 <div class="ui icon item crud-search-div">
   <!-- Recherche -->
@@ -18,7 +21,7 @@
     <div class="ui icon input">
       <input class="crud-search-input-1" type="hidden" value="">
       <input type="text" class="crud-search-input" data-url="/search/{{appid}}/{{tableid}}/{{viewid}}"
-        value="{{search}}" placeholder="Recherche...">
+        value="{{tv.search}}" placeholder="Recherche...">
       <i class="circular search link icon crud-search-go" title="Rechercher"></i>
     </div>
     <i class="close link icon crud-search-close" title="Fermer la recherche"></i>
@@ -43,16 +46,19 @@
 {%- endblock -%}
 
 {%- block content -%}
+
+{% set tv = tvs | first %}
+
 <div class="ui container" {%- if application.in_footer -%} style="margin-bottom: 6em;height: 100%" {%- endif -%}>
-  {% include "incl_flash.html" %}
+  {% include "inc_flash.html" %}
   <div class="crud-mobile-show ui label">
     {{view.title}}&nbsp;
-    {%- if trs | length == 0 -%}
+    {%- if tv.trs | length == 0 -%}
     (aucun élément)
-    {%- elif trs | length == 1 -%}
+    {%- elif tv.trs | length == 1 -%}
     (1 élément)
     {%- else -%}
-    ({{trs|length}} éléments)
+    ({{tv.trs|length}} éléments)
     {%- endif -%}
   </div>
   {%- if view.form_add -%}
@@ -69,7 +75,7 @@
   <form class="ui form" id="formFilter" method="POST" action="/filter/{{appid}}/{{tableid}}/{{viewid}}">
     <input id="resetfilter" name="resetfilter" type="hidden">
     <div class="fields">
-      {%- for vel in filters -%}
+      {%- for vel in tv.filters -%}
       <div class="bee-width-s field">
         {%- if vel.type_element == "tag" or vel.type_element == "list" or vel.type_element == "radio" -%}
         <select name="{{vel.elid}}" id="{{vel.elid}}" class="ui fluid search dropdown">
@@ -98,65 +104,9 @@
   </form>
   {%- endif -%}
   <!-- TABLE -->
-  {{ macros::table(vview=view, vtrs=trs) }}
-  {# <table
-    class="ui unstackable collapsing sortable {% if view.form_view or view.form_edit %} selectable {% endif %} celled table"
-    data-role="table" data-mode="columntoggle" data-appid="{{appid}}" data-tableid="{{tableid}}"
-    data-viewid="{{viewid}}">
-    <thead>
-      <tr class="crud-unsort">
-        {%- if view.with_line_number -%}<th>&nbsp;</th>{%- endif -%}
-        {%- for el in view.velements -%}
-        {%- if not el.hide -%}
-        <th id="col_{{el.elid}}"
-          class="ui {{el.col_align}} aligned{% if el.hide_on_mobile %} crud-mobile-hide{% endif %}{% if sortid ==  el.elid %} sorted {{sortdirection}}{% endif %} crud-ajax-sort"
-          title="{{el.elid}}">{{el.label_short}}</th>
-        {%- endif -%}
-        {%- endfor -%}
-      </tr>
-    </thead>
-    <tbody>
-      {%- for tr in trs -%}
-      <tr class="{%if tr.url_open%}crud-jquery-url{%endif%} {{tr.class}}" style="{{tr.style}}"
-        data-url="{{tr.url_open}}" data-press="{{tr.url_press}}">
-        {%- if view.with_line_number -%}<td class="right aligned">{{loop.index}}</td>{%- endif -%}
-        {%- for vel in view.velements -%}
-        {%- if not vel.hide -%}
-        {{ macros::table_elements(el=tr.record[vel.elid]) }}
-        {%- endif -%}
-        {%- endfor -%}
-      </tr>
-      {%- endfor -%}
-    </tbody>
-    <!-- footer avec les sum -->
-    {%- if view.with_sum and trs | length > 0 -%}
-    <tfoot>
-      <tr class="">
-        {%- if view.with_line_number -%}<td>&nbsp;</td>{%- endif -%}
-        {%- for vel in view.velements -%}
-        {%- if not vel.hide -%}
-        {%- if vel.with_sum -%}
-        {%- if vel.type_element == "amount" -%}
-        <td nowrap style="text-align: right;{% if sums[vel.elid].sum < 0.0 %}color: red{%else%}color: green{% endif %}">
-          {{sums[vel.elid].sum | as_str | format_amount }}
-        </td>
-        {%- else -%}
-        <td nowrap
-          style="text-align: center;{% if sums[vel.elid].sum < 0.0 %}color: red{%else%}color: green{% endif %}">
-          {{sums[vel.elid].sum}}
-        </td>
-        {%- endif -%}
-        {%- else -%}
-        <td></td>
-        {%- endif -%}
-        {%- endif -%}
-        {%- endfor -%}
-      </tr>
-    </tfoot>
-    {%- endif -%}
-  </table> #}
+  {{ macros::macro_table(tv=tv) }}
 </div>
-{% include "incl_view_footer.html" %}
+{% include "inc_view_footer.html" %}
 {%- endblock -%}
 {%- block forms -%}
 <input type="hidden" id="crud_view" value="{{appid}}-{{tableid}}-{{viewid}}">
