--- a/templates/macro_table.html
+++ b/templates/macro_table.html
@@ -26,25 +26,32 @@ Macro d'affichage d'une table html d'une vue
       {%- for vel in tv.view.velements -%}
       {%- if not vel.hide -%}
       {%- set el = tr.record[vel.elid] -%}
+
       {# traitement des types d'éléments #}
       {%- if el.type_element == "amount" -%}
-      <td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}">{{el.format}}</td>
+      <td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}" >{{el.format}}</td>
+
       {%- elif el.type_element == "number" -%}
-      <td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}">{{el.value}}</td>
+      <td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}" {%- if el.col_no_wrap -%}nowrap{%-endif-%}>
+        {%- if el.format -%}{{el.format}}{%-else-%}{{el.value}}{%-endif-%}
+      </td>
+
       {%- elif el.type_element == "checkbox" -%}
       <td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}">
         <input type="checkbox" {% if el.value=="1" %}checked{% endif %} disabled></input>
       </td>
+
       {%- elif el.type_element == "tag" -%}
-      <td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}">
+      <td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}" {%- if el.col_no_wrap -%}nowrap{%-endif-%}>
         {%- for item in el.value | split(pat=",") -%}
         {%- if item -%}
         <div class="ui tag tiny label" style="margin-bottom: 0.5em;margin-right: 0.3em;">{{item}}</div>
         {%- endif -%}
         {%- endfor -%}
       </td>
+
       {%- else -%}
-      <td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}">
+      <td class="ui {{el.col_align}} aligned {{el.class}}" style="{{el.style}}" {%- if el.col_no_wrap -%}nowrap{%-endif-%}>
         {%- if el.format -%}{{el.format}}{%-else-%}{{el.value}}{%-endif-%}
       </td>
       {%- endif -%} {# /end el.type #}
