--- a/templates/tpl_add.html
+++ b/templates/tpl_add.html
@@ -8,7 +8,7 @@
 {%- block navigation -%}
 <a href="{{back}}" class="item" style="padding: 0.3em;">
   <i class="arrow left icon"></i>
-  <div class="header item">abandon</div>
+  <div class="header item">retour</div>
 </a>
 {%- endblock -%}
 
