--- a/templates/macro_edit_elements.html
+++ b/templates/macro_edit_elements.html
@@ -9,7 +9,7 @@
   <input {%if el.protected or el.read_only%}readonly="" {%endif%} type="number" inputmode="numeric" step="0.01"
     name="{{el.elid}}" id="{{el.elid}}" placeholder="{{el.place_holder}}" {%if el.pattern %}pattern="{{el.pattern}}"
     {%endif%}" value="{{el.value}}">
-  {% if el.help %}<span class="ui small blue text">{{el.help | markdown}}</span>{%endif%}
+  {% if el.help %}<span class="ui small blue text">{{el.help | markdown | safe}}</span>{%endif%}
 </div>
 {%- elif el.type_element == "button" -%}
 <!-- button -->
@@ -25,25 +25,24 @@
     <input type="checkbox" name="{{el.elid}}" id="{{el.elid}}" {%if el.protected or el.read_only%}readonly="" {%endif%}
       {% if el.value=='1' %} checked{% endif %}>
     <label for="{{el.elid}}">{{el.label_long}}</label>
-    {% if el.help %}<span class="ui small blue text">{{el.help | markdown}}</span>{%endif%}
+    {% if el.help %}<span class="ui small blue text">{{el.help | markdown | safe}}</span>{%endif%}
   </div>
 </div>
 {%- elif el.type_element == "list" -%}
 <!-- list -->
 <div class="{%if el.required%}required {%endif%}bee-width-{{el.width}} field {{el.error}}">
-  <label for="{{el.elid}}">{{el.label_long}}</label>
-  <select name="{{el.elid}}" id="{{el.elid}}" {%if el.required%}required="" {%endif%} class="ui fluid dropdown {% if
-        el.class %}{{ el.class }}{% endif %}" {% if el.style %}style="{{ el.style }}" {% endif %} {% if el.read_only
-    %}readonly="" {% endif %}>
-    {%- for item in el.items -%}
-    {%- if item.key in el.value -%}
-    <option value="{{item.key}}" selected="">{{item.label}}</option>
-    {%- else -%}
-    <option value="{{item.key}}">{{item.label}}</option>
-    {%- endif -%}
-    {%- endfor -%}
-  </select>
-  {% if el.help %}<span class="ui small blue text">{{el.help | markdown}}</span>{%endif%}
+  <label>{{el.label_long}}</label>
+  <div class="ui {%if el.protected or el.read_only%}read-only{%endif%} fluid search selection dropdown">
+    <input type="hidden" name="{{el.elid}}" value="{{el.value}}">
+    <i class="dropdown icon"></i>
+    <div class="default text">{{el.place_holder}}</div>
+    <div class="menu">
+      {%- for item in el.items -%}
+      <div class="item" data-value="{{item.key}}">{{item.label}}</div>
+      {%- endfor -%}
+      {% if el.help %}<span class="ui small blue text">{{el.help | markdown | safe}}</span>{%endif%}
+    </div>
+  </div>
 </div>
 {%- elif el.type_element == "number" -%}
 <!-- number -->
@@ -52,13 +51,14 @@
   <input {%if el.protected or el.read_only%}readonly="" {%endif%} {%if el.required%}required="" {%endif%} type="number"
     inputmode="numeric" step="any" name="{{el.elid}}" id="{{el.elid}}" placeholder="{{el.place_holder}}" {%if el.pattern
     %}pattern="{{el.pattern}}" {%endif%}" value="{{el.value}}">
-  {% if el.help %}<span class="ui small blue text">{{el.help | markdown}}</span>{%endif%}
+  {% if el.help %}<span class="ui small blue text">{{el.help | markdown | safe}}</span>{%endif%}
 </div>
 {%- elif el.type_element == "tag" -%}
 <!-- tag -->
 <div class="{%if el.required%}required {%endif%}bee-width-{{el.width}} field {{el.error}}" style="min-width: 215px">
   <label for="{{el.elid}}">{{el.label_long}}</label>
-  <select multiple="" name="{{el.elid}}" id="{{el.elid}}" {%if el.required%}required="" {%endif%} class="ui fluid dropdown {% if
+  <select multiple="" name="{{el.elid}}" id="{{el.elid}}" {%if el.required%}required="" {%endif%} {%if el.protected or
+    el.read_only%}readonly="" {%endif%} class="ui fluid dropdown {% if
         el.class %}{{ el.class }}{% endif %}" {% if el.style %}style="{{ el.style }}" {% endif %} {% if el.read_only
     %}readonly="" {% endif %}>
     {%- for item in el.items -%}
@@ -69,7 +69,7 @@
     {%- endif -%}
     {%- endfor -%}
   </select>
-  {% if el.help %}<span class="ui small blue text">{{el.help | markdown}}</span>{%endif%}
+  {% if el.help %}<span class="ui small blue text">{{el.help | markdown | safe}}</span>{%endif%}
 </div>
 {%- elif el.type_element == "textarea" -%}
 <!-- textarea -->
@@ -77,7 +77,7 @@
   <label for="{{el.elid}}">{{el.label_long}}</label>
   <textarea {%if el.protected or el.read_only%}readonly="" {%endif%} {%if el.required%}required="" {%endif%}
     name="{{el.elid}}" id="{{el.elid}}">{{el.value}}</textarea>
-  {% if el.help %}<span class="ui small blue text">{{el.help | markdown}}</span>{%endif%}
+  {% if el.help %}<span class="ui small blue text">{{el.help | markdown | safe}}</span>{%endif%}
 </div>
 {%- elif el.type_element in ["date","email","password","tel","text","time", "url"] -%}
 <!-- date email password tel text time url -->
@@ -86,7 +86,7 @@
   <input {%if el.protected or el.read_only%}readonly="" {%endif%} {%if el.required%}required="" {%endif%}
     type="{{el.type_element}}" name="{{el.elid}}" id="{{el.elid}}" placeholder="{{el.place_holder}}" {%if el.pattern
     %}pattern="{{el.pattern}}" {%endif%} value="{{el.value}}">
-  {% if el.help %}<span class="ui small blue text">{{el.help | markdown}}</span>{%endif%}
+  {% if el.help %}<span class="ui small blue text">{{el.help | markdown | safe}}</span>{%endif%}
 </div>
 {%- endif -%}
 {%- endmacro macro_edit_elements -%}
